--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "R",
-    "image": "ghcr.io/rocker-org/devcontainer/geospatial:4.3",
+    "image": "ghcr.io/rocker-org/devcontainer/geospatial:4.2.1",
     "features": {
         "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {
             "version": "prerelease"
@@ -9,7 +9,7 @@
             "packages": "libudunits2-dev,libxtst6,libxt6,libmagick++-dev"
         },
         "ghcr.io/rocker-org/devcontainer-features/r-packages:1": {
-            "packages": "MASS,grDevices,graphics,pracma,purrr,mvnfast,mclust,remotes,doParallel,parallel,foreach"
+            "packages": "MASS,grDevices,graphics,tclust,Rcpp,foreach,rlang,cellWise,reshape2,scales,ggplot2,matrixStats,gridExtra,robustbase,rrcov,svd,shape,pracma,purrr,mvnfast,mclust,remotes,doParallel,parallel,foreach,MixtureMissing,mvtnorm,mnormt,cluster,Bessel,mice"
         },
     },
     "forwardPorts": [8787, 8888],
